--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,6 +4,13 @@ layout: default
 
 <article class="post">
   <h1>{{ page.title }}</h1>
+  
+  <div class="category-list">
+  <h3>categories: </h3>
+  {% for category in page.categories %}
+	<li>&nbsp;&nbsp; {{ category | first }}</li>
+  {% endfor %}
+  </div>
 
   <div class="entry">
     {{ content }}
