--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,6 +9,8 @@ layout: default
     Written on {{ page.date | date: "%B %e, %Y" }}
   </div>
   
+  <div id="toc"></div>
+  
   <div class="entry">
     {{ content }}
   </div>
