--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,12 +28,12 @@ $( document ).ready(function() {
     $(".post").find("h2,h3,h4,h5,h6").each(function(i,item){
     var tag = $(item).get(0).localName;
     $(item).attr("id","wow"+i);
-    $("#AnchorContent").append('<li><a class="new'+tag+' anchor-link" onclick="return false;" href="#" link="#wow'+i+'">'+(i+1)+" · "+$(this).text()+'</a></li>');
-    $(".newh2").css("margin-left",0);
-    $(".newh3").css("margin-left",20);
-    $(".newh4").css("margin-left",40);
-    $(".newh5").css("margin-left",60);
-    $(".newh6").css("margin-left",80);
+    $("#AnchorContent").append('<li><a class="new'+tag+' anchor-link" onclick="return false;" href="#" link="#wow'+i+'">'+" · "+$(this).text()+'</a></li>');
+    $(".newh2").parent().css("margin-left",0);
+    $(".newh3").parent().css("margin-left",20);
+    $(".newh4").parent().css("margin-left",40);
+    $(".newh5").parent().css("margin-left",60);
+    $(".newh6").parent().css("margin-left",80);
 });
 $("#AnchorContentToggle").click(function(){
     var text = $(this).html();
