修改目录链接； 修改摘要字数。

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,7 +28,7 @@ $( document ).ready(function() {
     $(".post").find("h2,h3,h4,h5,h6").each(function(i,item){
 		var tag = $(item).get(0).localName;
 		$(item).attr("id","wow"+i);
-		$("#AnchorContent").append('<li><a class="new'+tag+' anchor-link" onclick="return false;" href="#" link="#wow'+i+'">'+$(this).text()+'</a></li>');
+		$("#AnchorContent").append('<li><a class="new'+tag+' anchor-link" onclick="return false;" href="#wow'+i+'">'+$(this).text()+'</a></li>');
 		$(".newh2").parent().css("margin-left",0);
 		$(".newh3").parent().css("margin-left",20);
 		$(".newh4").parent().css("margin-left",40);
